--- a/style.css
+++ b/style.css
@@ -20,7 +20,12 @@ td {
   color: black;
 }
 
-
+#reset{
+  padding:30px;
+  border-radius: 20px;
+  background-color: black;
+  color:white;
+}
 
 #reset:hover{
   background: white;
